Fix menu width on mobile

--- a/src/components/HeaderMegaMenu/index.css
+++ b/src/components/HeaderMegaMenu/index.css
@@ -120,6 +120,7 @@
   }
 
   .HeaderMegaMenu {
+    min-width: 0;
     width: calc(100vw - 2em);
     top: 100%;
   }
